--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 remote_theme: pages-themes/slate@v0.2.0
 plugins:
 - jekyll-remote-theme
+
+title: FxGen Studio
+logo: http://www.fxgenstudio.com/assets/fxgenstudiologo.png
+show_downloads: false
