--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -19,7 +19,7 @@ projects:
 
 social:
 - {icon: 'twitter',   link: 'https://twitter.com/procfxgen'}
-- {icon: 'discord',   link: 'https://discord.gg/sPsxex6S'}
+- {icon: 'soundcloud',   link: 'https://discord.gg/sPsxex6S'}
 
 
 # social network icons available: 'twitter' / 'facebook' / 'github' / 'pinterest' 'google-plus' / 'linkedin' / 'youtube' / 'instagram' / 'dribbble' / 'behance' / 'soundcloud' / 'vine'
