--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -18,8 +18,9 @@ projects:
 # Contact Section
 
 social:
-- {icon: 'twitter',   link: 'https://twitter.com/procfxgen'}
-- {icon: 'discord',   link: 'https://discord.gg/sPsxex6S'}
+- {icon: 'twitter',     link: 'https://twitter.com/procfxgen'}
+- {icon: 'discord',     link: 'https://discord.gg/sPsxex6S'}
+- {icon: 'mail-dot-ru', link: 'mailto:fxgenstudio@gmail.com'}
 
 
 # social network icons available: 'twitter' / 'facebook' / 'github' / 'pinterest' 'google-plus' / 'linkedin' / 'youtube' / 'instagram' / 'dribbble' / 'behance' / 'soundcloud' / 'vine' / 'discord'
