fix: lien discord

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -21,7 +21,7 @@ projects:
 social:
 - {icon: 'twitter',     link: 'https://twitter.com/procfxgen'}
 - {icon: 'mastodon',     link: 'https://mastodon.social/@fxgenstudio'}
-- {icon: 'discord',     link: 'https://discord.gg/sPsxex6S'}
+- {icon: 'discord',     link: 'https://discord.gg/VKGEyBqbmt'}
 - {icon: 'youtube',     link: 'https://www.youtube.com/@FxGenStudio'}
 - {icon: 'mail-dot-ru', link: 'mailto:fxgenstudio@gmail.com'}
 
